add overview page to list repositories, members and organizations

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Github API Demo</h1>
+<p>Login with github to view your epositories, members and organizations </p>
 
 <%= link_to "Sign Up/Log In", github_auth_path %>
