--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Github API Demo</h1>
-<p>Login with github to view your epositories, members and organizations </p>
+<p>Login with github to view your repositories, members and organizations </p>
 
 <%= link_to "Sign Up/Log In", github_auth_path %>
